feat: add basic html-code

--- a/_src/scss/configs/variables.scss
+++ b/_src/scss/configs/variables.scss
@@ -1,6 +1,11 @@
 :root {
-  --color-white: #ffffff;
+  --basic-white: #ffffff;
+  --basic-black: #030303;
+
+  --special-red: #710707;
+  --special-brown: #9d8665;
 }
+
 /* ------------------------------------*|
   #SCSS-variables
 /*------------------------------------ */
