feat: add video section layout

--- a/_src/scss/configs/variables.scss
+++ b/_src/scss/configs/variables.scss
@@ -1,9 +1,16 @@
 :root {
   --basic-white: #ffffff;
-  --basic-black: #030303;
+
+  --basic-black: #000000;
+  --bg-dark: #030303;
+
+  --basic-gray: #666666;
+  --light-gray: #c4c4c4;
+
+  --basic-blue: #24809e;
 
   --special-red: #710707;
-  --special-brown: #9d8665;
+  --special-gold: #9d8665;
 }
 
 /* ------------------------------------*|
