--- a/_src/scss/style.scss
+++ b/_src/scss/style.scss
@@ -2,3 +2,27 @@
 @import "configs/fonts.scss";
 
 @import "global.scss";
+
+@import "blocks/logo.scss";
+@import "blocks/section.scss";
+@import "blocks/social.scss";
+
+@import "blocks/header.scss";
+@import "blocks/navigation.scss";
+
+
+@import "blocks/welcome.scss";
+
+@import "blocks/visiting.scss";
+@import "blocks/place.scss";
+
+@import "blocks/explore.scss";
+
+@import "blocks/video.scss";
+@import "blocks/player.scss";
+
+
+
+@import "blocks/contacts.scss";
+
+@import "blocks/footer.scss";
