feat: finish implement scss styles of all blocks

--- a/_src/scss/style.scss
+++ b/_src/scss/style.scss
@@ -21,6 +21,10 @@
 @import "blocks/video.scss";
 @import "blocks/player.scss";
 
+@import "blocks/tickets.scss";
+@import "blocks/ticket-type.scss";
+@import "blocks/amount.scss";
+
 
 
 @import "blocks/contacts.scss";
