--- a/_src/scss/blocks/place.scss
+++ b/_src/scss/blocks/place.scss
@@ -4,6 +4,11 @@
 .place__link {
   display: flex;
   flex-direction: column;
+
+  &:hover .place__title::after,
+  &:focus .place__title::after {
+    width: 100%;
+  }
 }
 
 .place__title {
@@ -26,6 +31,7 @@
     width: 300px;
     height: 2px;
     background-color: var(--special-red);
+    transition: width 400ms ease 0s;
   }
 }
 
