--- a/_src/scss/configs/fonts.scss
+++ b/_src/scss/configs/fonts.scss
@@ -31,6 +31,27 @@
     url("../fonts/roboto-v27-latin-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+/* roboto-regular - latin */
+
+@font-face {
+  font-weight: 700;
+  font-family: "Roboto";
+  font-style: normal;
+  font-display: swap;
+  src: local(""), url("../fonts/roboto-v27-latin-regular.woff2") format("woff2"),
+    url("../fonts/roboto-v27-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* roboto-700 - latin */
+
+@font-face {
+  font-weight: 700;
+  font-family: "Roboto";
+  font-style: normal;
+  src: local(""), url("../fonts/roboto-v27-latin-700.woff2") format("woff2"),
+    url("../fonts/roboto-v27-latin-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 /* forum-regular - latin */
 
 @font-face {
