--- a/_src/scss/blocks/ticket-type.scss
+++ b/_src/scss/blocks/ticket-type.scss
@@ -12,7 +12,11 @@
 }
 
 .ticket-type__option {
-  margin-bottom: 40px;
+  margin-bottom: 50px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .ticket-type__input-radio:hover + .ticket-type__label,
