--- a/_src/scss/blocks/social.scss
+++ b/_src/scss/blocks/social.scss
@@ -12,7 +12,9 @@
 }
 
 .social__link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 48px;
   height: 48px;
   border: 1px solid var(--basic-gray);
@@ -24,26 +26,15 @@
   &:hover,
   &:focus {
     border-color: var(--special-gold);
-    background-color: var(--special-gold);
+  }
+
+  &:hover svg,
+  &:focus svg {
+    fill: var(--special-gold);
   }
 }
 
-.social__link--youtube {
-  background-image: url("../../img/icons/icon-youtube.svg");
-}
-
-.social__link--instagram {
-  background-image: url("../../img/icons/icon-instagram.svg");
-}
-
-.social__link--facebook {
-  background-image: url("../../img/icons/icon-facebook.svg");
-}
-
-.social__link--twitter {
-  background-image: url("../../img/icons/icon-twitter.svg");
-}
-
-.social__link--pinterest {
-  background-image: url("../../img/icons/icon-pinterest.svg");
+.social__link svg {
+  transition: fill 200ms ease 0s;
+  fill: var(--basic-white);
 }
