fix: correct relative path of bg-image

--- a/_src/scss/blocks/welcome.scss
+++ b/_src/scss/blocks/welcome.scss
@@ -1,7 +1,7 @@
 .welcome {
   padding-top: 114px;
   padding-bottom: 246px;
-  background-image: url("../../img/welcome/background.jpg");
+  background-image: url("../img/welcome/background.jpg");
   background-repeat: no-repeat;
   background-position: calc(50% + 350px) 0;
   background-size: 1215px 750px;
